force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/breadwinner_qbo__BW_AP_Bill_PO__c.object-meta.xml
<CustomObject>
    <description>Bills and POs from your QuickBooks synced into Salesforce through Breadwinner</description>
    <label>Bill / PO</label>
    <nameField>
        <label>Bill / PO Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuickBooks Bills &amp; POs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>