force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/fields/breadwinner_qbo__Account__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Bill_POs</relationshipName>
    <type>Lookup</type>
</CustomField>