force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/fields/breadwinner_qbo__BillPO_Id__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__BillPO_Id__c</fullName>
    <externalId>true</externalId>
    <label>Bill / PO Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>