force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/fields/breadwinner_qbo__BillPO_URL__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__BillPO_URL__c</fullName>
    <formula>HYPERLINK( 
&quot;https://&quot;&amp;IF( CONTAINS(breadwinner_qbo__QBO_Org_Name__c , &quot;Sandbox Company&quot;), &quot;sandbox.&quot; ,&quot;&quot;) &amp;&quot;qbo.intuit.com/app/&quot;&amp;
CASE(
breadwinner_qbo__Type__c,

&apos;Bill&apos;, &quot;bill?txnId=&quot;&amp;RIGHT(breadwinner_qbo__BillPO_Id__c,(LEN(breadwinner_qbo__BillPO_Id__c)-FIND(&apos;-Bill-&apos;, breadwinner_qbo__BillPO_Id__c) - 5)),

&apos;Purchase Order&apos;,&quot;purchaseorder?txnId=&quot;&amp;RIGHT(breadwinner_qbo__BillPO_Id__c,(LEN(breadwinner_qbo__BillPO_Id__c)-FIND(&apos;-PO-&apos;, breadwinner_qbo__BillPO_Id__c)- 3)),

&quot;vendorcredit?txnId=&quot;&amp;RIGHT(breadwinner_qbo__BillPO_Id__c,(LEN(breadwinner_qbo__BillPO_Id__c)-FIND(&apos;-VC-&apos;, breadwinner_qbo__BillPO_Id__c)- 3))
),
&quot;Click Here&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>See this Bill / PO in QuickBooks</label>
    <type>Text</type>
</CustomField>