force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/fields/breadwinner_qbo__Custom_Field_3_Name__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Custom_Field_3_Name__c</fullName>
    <label>Custom Field 3 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>