force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/fields/breadwinner_qbo__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>