force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/fields/breadwinner_qbo__Global_Tax_Calculation__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Global_Tax_Calculation__c</fullName>
    <description>Method in which tax is applied. Allowed values are: TaxExcluded, TaxInclusive, and NotApplicable</description>
    <label>Global Tax Calculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>