force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/fields/breadwinner_qbo__Location_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Location_Field_Value__c</fullName>
    <label>Location Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>