force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/fields/breadwinner_qbo__Mailing_Location__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Mailing_Location__c</fullName>
    <label>Mailing Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>