force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/fields/breadwinner_qbo__Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Mailing_State__c</fullName>
    <label>Mailing State/Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>