force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/fields/breadwinner_qbo__Mailing_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Mailing_Street_Address__c</fullName>
    <label>Mailing Street Address</label>
    <type>TextArea</type>
</CustomField>