force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/fields/breadwinner_qbo__Purchase_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Purchase_Order_Status__c</fullName>
    <label>Purchase Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>