force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/fields/breadwinner_qbo__Ship_to__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Ship_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is using for PO to assign Shipping Customer.</description>
    <label>Ship to</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>breadwinner_qbo__Breadwinner_Account_Connection__c.breadwinner_qbo__Type__c</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>breadwinner_qbo__Breadwinner_Account_Connection__c</referenceTo>
    <relationshipLabel>Alternate Shipping Address for Bills and POs</relationshipLabel>
    <relationshipName>Bill_POs_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>