force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/fields/breadwinner_qbo__Status__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Status__c</fullName>
    <formula>IF( 
ISBLANK( breadwinner_qbo__Internal_Status__c ), 
CASE( 
breadwinner_qbo__Type__c, 
&apos;Purchase Order&apos;, breadwinner_qbo__Purchase_Order_Status__c, 
&apos;Bill&apos;, IF( breadwinner_qbo__Balance_Due__c&gt; 0, 
IF(breadwinner_qbo__Due_Date__c&lt;TODAY() ,&apos;Overdue&apos;,&apos;Open/Partial&apos;), 
&apos;Paid&apos; 
),
&apos;Vendor Credit&apos;, IF(breadwinner_qbo__Balance_Due__c &gt; 0, &apos;Unapplied&apos;, &apos;Closed&apos;),
&apos;Invalid&apos; 
), 
breadwinner_qbo__Internal_Status__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>