force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/fields/breadwinner_qbo__Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Status_Flag__c</fullName>
    <formula>IF(ISBLANK( breadwinner_qbo__Internal_Status__c ),
            IF(breadwinner_qbo__Type__c = &apos;Bill&apos;,  
                IF(breadwinner_qbo__Status__c = &apos;Paid&apos;,
                    IMAGE(&quot;https://s3.amazonaws.com/bw-cdn/bill_g.png&quot;, &quot;Paid&quot;, 20,20),
                    IF(breadwinner_qbo__Status__c = &apos;Overdue&apos;,
                        IMAGE(&quot;https://s3.amazonaws.com/bw-cdn/bill_r.png&quot;, &quot;OverDue&quot;, 20,20),
                        IMAGE(&quot;https://s3.amazonaws.com/bw-cdn/bill_o.png&quot;, &quot;Open/Partial&quot;, 20,20)
                    )
                ),
                IF(breadwinner_qbo__Status__c=&apos;Closed&apos;,
                    IMAGE(&quot;https://s3.amazonaws.com/bw-cdn/po_g.png&quot;, &quot;Closed&quot;, 20,20),
                    IMAGE(&quot;https://s3.amazonaws.com/bw-cdn/po_o.png&quot;,&apos;Open&apos;, 20,20)
                )
            ),
            IF(breadwinner_qbo__Internal_Status__c = &apos;Open/Partial&apos;,
                IMAGE(&quot;https://s3.amazonaws.com/bw-cdn/yflag.png&quot;, &quot;Open/Partial&quot; , 20,20),
                IF(OR(breadwinner_qbo__Internal_Status__c = &apos;Received In Full&apos;,breadwinner_qbo__Internal_Status__c = &apos;Closed&apos;),
                    IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Paid&quot;, 20, 20),
                    IMAGE(&quot;https://s3.amazonaws.com/bw-cdn/X.png&quot;, &quot;Deleted / Voided&quot;, 20,20)
                )
            )
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>