force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/fields/breadwinner_qbo__Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Sub_Total__c</fullName>
    <formula>breadwinner_qbo__Total__c - breadwinner_qbo__Total_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>