force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/fields/breadwinner_qbo__Terms_Ref__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Terms_Ref__c</fullName>
    <label>Terms Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>