force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/fields/breadwinner_qbo__Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Total_Tax__c</fullName>
    <label>Total Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>