force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/fields/breadwinner_qbo__Vendor_Reference__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Vendor_Reference__c</fullName>
    <label>Vendor Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>