force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/listViews/breadwinner_qbo__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_qbo__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_qbo__Status__c</columns>
    <columns>breadwinner_qbo__Status_Flag__c</columns>
    <columns>breadwinner_qbo__Account__c</columns>
    <columns>breadwinner_qbo__Type__c</columns>
    <columns>breadwinner_qbo__QBO_Company__c</columns>
    <columns>breadwinner_qbo__Vendor_Name__c</columns>
    <columns>breadwinner_qbo__Due_Date__c</columns>
    <columns>breadwinner_qbo__BillPO_Date__c</columns>
    <columns>breadwinner_qbo__Balance_Due__c</columns>
    <columns>breadwinner_qbo__Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>